<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_menu_noticias"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_favoritos"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_menu_recordatorios"
            android:title="@string/menu_recordatorios" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_ajustes"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>