<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_noticias">

    <fragment
        android:id="@+id/nav_noticias"
        android:name="com.example.tuseventos.ui.NoticiasFragment"
        android:label="@string/menu_noticias"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.tuseventos.ui.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_recordatorios"
        android:name="com.example.tuseventos.ui.RecordatoriosFragment"
        android:label="@string/menu_recordatorios"
        tools:layout="@layout/fragment_recordatorios" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.tuseventos.ui.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes" />
</navigation>